--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fast-courier-frontend",
-  "version": "0.0.0",
+  "name": "fast-courier",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -13,15 +13,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.0.0",
+    "@angular/cdk": "^5.0.0-rc.2",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
+    "@angular/material": "^5.0.0-rc.2",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular/router": "^5.0.5",
+    "@covalent/core": "^1.0.0-rc.0",
+    "@covalent/dynamic-forms": "^1.0.0-rc.0",
+    "@covalent/highlight": "^1.0.0-rc.0",
+    "@covalent/http": "^1.0.0-rc.0",
+    "@covalent/markdown": "^1.0.0-rc.0",
     "core-js": "^2.4.1",
+    "material-design-icons-iconfont": "^3.0.3",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
