--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "^1.5.5",
-    "@angular/compiler-cli": "^5.0.0",
     "@angular/animations": "^5.0.0",
     "@angular/cdk": "^5.0.0-rc.2",
+    "@angular/cli": "^1.5.5",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
+    "@angular/compiler-cli": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
@@ -34,11 +34,12 @@
     "connect-busboy": "0.0.2",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "hammerjs": "^2.0.8",
     "material-design-icons-iconfont": "^3.0.3",
     "path": "^0.12.7",
     "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14",
-    "typescript": "~2.4.2"
+    "typescript": "~2.4.2",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/language-service": "^5.0.0",
