--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fast-courier",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -36,6 +36,7 @@
     "express": "^4.16.2",
     "hammerjs": "^2.0.8",
     "material-design-icons-iconfont": "^3.0.3",
+    "ng2-validation": "^4.2.0",
     "path": "^0.12.7",
     "rxjs": "^5.5.2",
     "typescript": "~2.4.2",
